Cleaned up notebook

--- a/src/word_embeddings.ipynb
+++ b/src/word_embeddings.ipynb
@@ -1,11 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Phase 1: Create a Word-Embedding layer "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#imports\n",
     "from flair.embeddings import WordEmbeddings\n",
     "from flair.data import Sentence\n",
     "import networkx as nx\n",
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +61,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  We decided to compute the distance using cosine similarity"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,72 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# list(G.nodes)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Compute the distance using euclidean distance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(0.)\n",
-      "tensor(4.8084)\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = word_emb['sky']\n",
-    "y = word_emb['cloud']\n",
-    "\n",
-    "print(torch.norm(x - x))\n",
-    "print(torch.norm(y - x))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A distance of 0 means that the words are the same. As the discrepancy increaces, the distance also increases. \n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for item in word_emb:\n",
-    "    x = word_emb[item]\n",
-    "    \n",
-    "    for word in word_emb:\n",
-    "        if word is not item:\n",
-    "            y = word_emb[word]\n",
-    "            euclidean_dis = torch.norm(y - x)\n",
-    "            \n",
-    "            if euclidean_dis < 3:\n",
-    "                G.add_edge(item, word)\n",
-    "#             print(\"x:\", item, \"y:\", word, \"distance: \", euclidean_dis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,163 +96,13 @@
        "529"
       ]
      },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "G.number_of_nodes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "45"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "G.number_of_edges()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('a', 'another'),\n",
-       " ('after', 'before'),\n",
-       " ('after', 'last'),\n",
-       " ('after', 'when'),\n",
-       " ('ankle', 'knee'),\n",
-       " ('away', 'back'),\n",
-       " ('back', 'out'),\n",
-       " ('be', 'not'),\n",
-       " ('because', 'not'),\n",
-       " ('because', 'what'),\n",
-       " ('before', 'when'),\n",
-       " ('better', 'good'),\n",
-       " ('boy', 'girl'),\n",
-       " ('bring', 'put'),\n",
-       " ('brother', 'uncle'),\n",
-       " ('cat', 'dog'),\n",
-       " ('do', 'you'),\n",
-       " ('down', 'up'),\n",
-       " ('garbage', 'trash'),\n",
-       " ('get', 'go'),\n",
-       " ('give', 'make'),\n",
-       " ('give', 'put'),\n",
-       " ('give', 'take'),\n",
-       " ('go', 'take'),\n",
-       " ('grandma', 'grandpa'),\n",
-       " ('hear', 'listen'),\n",
-       " ('here', 'today'),\n",
-       " ('hold', 'take'),\n",
-       " ('how', 'what'),\n",
-       " ('how', 'why'),\n",
-       " ('little', 'much'),\n",
-       " ('look', 'see'),\n",
-       " ('make', 'take'),\n",
-       " ('more', 'some'),\n",
-       " ('no', 'not'),\n",
-       " ('no', 'there'),\n",
-       " ('off', 'out'),\n",
-       " ('out', 'put'),\n",
-       " ('out', 'up'),\n",
-       " ('put', 'take'),\n",
-       " ('say', 'why'),\n",
-       " ('think', 'what'),\n",
-       " ('think', 'why'),\n",
-       " ('time', 'when'),\n",
-       " ('what', 'why')]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(G.edges)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Compute the distance using cosine similarity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "F = nx.Graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "F.add_nodes_from(words)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "529"
-      ]
-     },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(list(G.nodes))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.1302])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.cosine_similarity(x.unsqueeze(0),\n",
-    "                        y.unsqueeze(0))"
    ]
   },
   {
@@ -315,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,35 +128,88 @@
     "            cosine_sim = torch.cosine_similarity(x.unsqueeze(0), y.unsqueeze(0))\n",
     "            \n",
     "            if cosine_sim > .8:\n",
-    "                F.add_edge(item, word)\n",
-    "#             print(\"x:\", item, \"y:\", word, \"distance: \", euclidean_dis)"
+    "                G.add_edge(item, word)\n",
+    "#             print(\"x:\", item, \"y:\", word, \"distance: \", cosine_sim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "529"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "F.number_of_nodes()"
+    "G.number_of_nodes()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "246"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "F.number_of_edges()"
+    "G.number_of_edges()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The graph is not connected "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nx.is_connected(G))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nodes with higher closeness centrality are better connected with the rest of the nodes. I am assuming that nodes with a closeness centrality equal to zero are not connected to any other node. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(F.edges)"
+    "cc = nx.closeness_centrality(G)"
    ]
   },
   {
