Added DS_Store file to .gitignore

--- a/src/make_lancaster_embeddings.ipynb
+++ b/src/make_lancaster_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "norms = pd.read_csv('Lancaster_sensorimotor_norms_for_39707_words.csv')\n",
+    "norms = pd.read_csv('../data/Sensorimotor_norms.csv')\n",
     "\n",
     "cols = norms.describe().columns\n",
     "len(cols)\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,28 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.0777777778, 0.0444444444, 0.044943820183815174,\n",
-       "       0.1360544218367347, 0.0333333334, 0.9111111112,\n",
-       "       0.011872638879644713, 0.05941770646464646, 0.6823529412,\n",
-       "       0.094117647, 0.051027640049422354, 0.3622562285533143,\n",
-       "       0.21681265705337607, 0.25048971657138774, 0.5288325496381435,\n",
-       "       0.21027119094193375, 0.36436443013040165, 0.0972926271673859,\n",
-       "       0.2955553098269948, 0.8218044845773771, 0.40884821481007994,\n",
-       "       0.25205041511149917, 0.9111111112, 0.6326321946054998, 0.705357143,\n",
-       "       0.6823529412, 0.45436389826753265, 0.75, 0.9111111112,\n",
-       "       0.5969745565067616, 0.6685146503379856, 0.001123034689293736,\n",
-       "       0.0011229646266142617, 1.0, 0.0010144408640649241,\n",
-       "       0.001014380332955427, 1.0, 0.736697247638835, 0.7947819784394251],\n",
-       "      dtype=object)"
+       "array([0.0797948717948718, 0.0444, 0.0454731667349447, 0.1462078035949145,\n",
+       "       0.037851314596554844, 0.9112, 0.011907164480322906,\n",
+       "       0.05999999999999999, 0.6824, 0.0942, 0.05351856069232521,\n",
+       "       0.39078498293515357, 0.22258326563769293, 0.26746589499793305,\n",
+       "       0.5825902335456475, 0.21853741496598642, 0.38273142382731423,\n",
+       "       0.10460611278519157, 0.3260135135135135, 0.8757322175732217,\n",
+       "       0.4368098159509203, 0.2880694143167028], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,16 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39707"
+       "524"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
