Updated notebook with calculations to reproduce Table 1 from paper

--- a/src/make_lancaster_embeddings.ipynb
+++ b/src/make_lancaster_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,15 +23,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "norms = pd.read_csv('../data/Sensorimotor_norms.csv')\n",
     "\n",
     "cols = norms.describe().columns\n",
     "len(cols)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# normalize all columns\n",
     "for col in cols:\n",
     "    m = norms[col].max()\n",
@@ -40,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +86,7 @@
        "       0.4368098159509203, 0.2880694143167028], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +106,7 @@
        "524"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,9 +124,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a1b1a4322d5cd411ba5bda269f0fc64430bcd40e5df7d0b8819f8f4189205312"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.7.6 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
