Finished Evaluation Phase 1

--- a/src/lancaster_layer.ipynb
+++ b/src/lancaster_layer.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import networkx as nx\n",
     "import csv\n",
     "from nltk.stem import WordNetLemmatizer"
    ]
@@ -213,28 +214,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.0797948717948718, 0.0444, 0.0454731667349447, 0.1462078035949145,\n",
-       "       0.037851314596554844, 0.9112, 0.011907164480322906,\n",
-       "       0.05999999999999999, 0.6824, 0.0942, 0.05351856069232521,\n",
-       "       0.39078498293515357, 0.22258326563769293, 0.26746589499793305,\n",
-       "       0.5825902335456475, 0.21853741496598642, 0.38273142382731423,\n",
-       "       0.10460611278519157, 0.3260135135135135, 0.8757322175732217,\n",
-       "       0.4368098159509203, 0.2880694143167028], dtype=object)"
+       "array([0.45415384615384613, 0.0, 0.08787382220401475, 0.0, 0.0,\n",
+       "       0.48580000000000007, 0.0, 0.07285714285714286, 0.2142, 0.0714, 0.0,\n",
+       "       0.9637372013651877, 0.0, 0.38776353865233565, 0.0, 0.0, 1.0, 0.0,\n",
+       "       0.564189189189189, 0.8907949790794979, 0.5464212678936605, 0.0],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vecs['red']"
+    "vecs['a']"
    ]
   },
   {
@@ -640,6 +639,31 @@
    "source": [
     "norms"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lancaster_graph = nx.Graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lancaster_graph.add_nodes_from(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
