--- a/src/Evaluation_phase1.ipynb
+++ b/src/Evaluation_phase1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,9 @@
     "import numpy as np\n",
     "from tqdm import tqdm_notebook as tqdm\n",
     "from numpy import dot\n",
-    "from numpy.linalg import norm"
+    "from numpy.linalg import norm\n",
+    "from sklearn.metrics.pairwise import cosine_similarity,cosine_distances\n",
+    "from tqdm import tqdm_notebook as tqdm"
    ]
   },
   {
@@ -1108,7 +1110,7 @@
    "outputs": [],
    "source": [
     "word_emb_list = []\n",
-    "for item in word_emb:\n",
+    "for item in tqdm(word_emb):\n",
     "    x = word_emb[item]\n",
     "    \n",
     "    for word in word_emb:\n",
@@ -1267,28 +1269,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "visual_words = [line.strip().replace('\"', \"\") for line in open('../data/wac_clip_freechild.txt')]"
+    "file = open('../data/clip_embeddings.txt', 'r')\n",
+    "lines = file.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "visual_list = []\n",
-    "\n",
-    "for pair in visual_words:   \n",
-    "    visual_list.append(tuple(map(str, pair.split('->'))))"
+    "visual_vecs = {}\n",
+    "for line in lines:\n",
+    "    visual_vecs[line.split()[0]] = line.split()[1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "513"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(visual_vecs['couch'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1320,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/florianaciaglia/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b3cb02355db4b1194be4231982c1b15",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/496 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "visual_list = []\n",
+    "for item in tqdm(visual_vecs):\n",
+    "    x = np.array(visual_vecs[item])\n",
+    "   \n",
+    "    for word in visual_vecs:\n",
+    "        if word is not item:\n",
+    "            y = np.array(visual_vecs[word])\n",
+    "          \n",
+    "            cosine_sim = cosine_similarity(x.reshape(1,-1),y.reshape(1,-1))\n",
+    "            \n",
+    "            if cosine_sim > .8:\n",
+    "                visual_list.append((item, word))\n",
+    "                visual_graph.add_edge(item, word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "612"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(visual_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,14 +1402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.4251497005988023\n"
+      "1.1568998109640831\n"
      ]
     }
    ],
@@ -1343,16 +1430,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.06509661244878844"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,16 +1457,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.3603314446075859"
+       "-0.3743916999602581"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,16 +1484,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4720558882235529"
+       "0.09829867674858223"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,12 +1583,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "lancaster_list = []\n",
-    "for item in vecs:\n",
+    "for item in tqdm(vecs):\n",
     "    x =  vecs[item]\n",
     "    \n",
     "    for word in  vecs:\n",
@@ -1523,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1647,7 @@
        "0.4884309389715761"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1674,7 @@
        "0.3429306184865875"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1701,7 @@
        "0.8738738738738738"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1682,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1700,14 +1787,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17.393213572854293\n"
+      "27.330812854442343\n"
      ]
     }
    ],
@@ -1728,16 +1815,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1731287607834658"
+       "0.33048673859820415"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1755,16 +1842,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.16446899275620427"
+       "-0.06984398586988612"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1782,16 +1869,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5279441117764471"
+       "1.0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1812,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
