--- a/src/Phase_2.ipynb
+++ b/src/Phase_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import pickle"
    ]
   },
@@ -167,97 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ISSUE HERE!! The network has more nodes than the vocab. Caused by the Lancaster layer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agg_list = set(list(aggregate.nodes))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#  set(vocab).symmetric_difference(set(agg_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weights = list(aggregate.degree(weight='weight')) # strength of each node"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16860\n"
-     ]
-    }
-   ],
-   "source": [
-    "overall = 0\n",
-    "for node in weights:\n",
-    "    overall += node[1]\n",
-    "\n",
-    "print(overall)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16860"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "overall = sum(node[1] for node in weights)\n",
-    "overall"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "normalized_weights = []\n",
-    "for node in weights:\n",
-    "    perc = node[1]/overall\n",
-    "    normalized_weights.append(perc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch_1 = np.random.choice(vocab, 20, p=normalized_weights)"
+    "# TODO: ISSUE HERE!! The network has more nodes than the vocab. Caused by the Lancaster layer"
    ]
   },
   {
@@ -308,9 +219,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# preferential attachment function call takes in a graph and a list of tuples --> for each node \n",
-    "#in the batch list, get all of its edges and create a list of tuples. \n",
-    "def preferential_attachment(G, vocab, weights, batch_size):\n",
+    " def preferential_attachment(G, vocab, weights, batch_size):\n",
+    "    '''\n",
+    "     preferential attachment function call takes in a graph \n",
+    "     and a list of tuples --> for each node in the batch list,\n",
+    "     get all of its edges and create a list of tuples.\n",
+    "    '''\n",
     "    \n",
     "    # create a random batch of nodes\n",
     "    batch = np.random.choice(vocab, batch_size, p=weights)\n",
@@ -328,9 +242,6 @@
     "    zip_lists = list(zip(batch, node_avgs_list))\n",
     "    \n",
     "    print(zip_lists) # list with averages preferential attachment scorer for each node in batch\n",
-    "    batch_avg = np.mean(node_avgs_list)\n",
-    "    print(\"\")\n",
-    "    print(\"batch average: \", batch_avg) # average preferential attachment score for the entire batch\n",
     "    \n",
     "    return batch_avg, batch"
    ]
@@ -338,7 +249,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -369,28 +282,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('toothbrush', 46.0), ('broken', 105.0), ('farm', 742.0), ('ouch', 171.0), ('jello', 147.0), ('full', 435.0), ('pour', 520.0), ('hand', 1524.0), ('sink', 1716.0), ('sidewalk', 75.0), ('why', 2781.0), ('long', 1317.0), ('banana', 3554.0), ('tractor', 3526.0), ('face', 857.0), ('snow', 548.0), ('now', 2864.0), ('build', 1039.0), ('tooth', 243.0), ('high', 409.0)]\n",
+      "\n",
+      "batch average:  1130.95\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1130.95,\n",
+       " array(['toothbrush', 'broken', 'farm', 'ouch', 'jello', 'full', 'pour',\n",
+       "        'hand', 'sink', 'sidewalk', 'why', 'long', 'banana', 'tractor',\n",
+       "        'face', 'snow', 'now', 'build', 'tooth', 'high'], dtype='<U12'))"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preferential_attachment(aggregate, vocab, None, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 83,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# vocab_copy = vocab.copy()\n",
-    "# weights_copy = normalized_weights.copy()\n",
-    "# while vocab_copy:\n",
-    "#     print(\"next time througt\")\n",
-    "#     batch_avg, nodes_used = preferential_attachment(aggregate, vocab_copy, weights_copy, 20)\n",
-    "#     for node in nodes_used:\n",
-    "#         print(node)\n",
-    "#         node_idx = vocab_copy.index(node)\n",
-    "#         vocab_copy.remove(node)\n",
-    "#         weights_copy.pop(node_idx)\n",
-    "    \n",
-    "#     #reset the normalized weights to sum to 1\n",
-    "#     normalize_weights(aggregate)\n",
-    "    \n",
-    "# print(\"The vocab list is empty\")\n",
-    "# #         \n",
-    "        "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
